# filu

./: .gitignore  CMakeLists.txt  README.md  configure  filu.pro  install-by-aptget  install-debian  install-include-functions.sh  install-yum  readme-arch.txt  readme-debian.txt  readme-fedora.txt  readme.txt
database/: CMakeLists.txt  Makefile.template  configure  readme.txt
database/defaults/: fi_types.sql  symbol_types.sql
database/functions/: 0000_id_from_caption.sql  0001_error_code.sql  0002_error_duplicate.sql  broker_insert.sql  convert_currency.sql  dividend_duplicate.sql  eodbar_get.sql  eodbar_insert.sql  fi_insert.sql  fiid_from_symbolcaption.sql  fpi_component_counter.sql  fpi_eodbar.sql  ftype_duplicate.sql  ftype_insert.sql  gfi_rawdata_eodbar.sql  gfi_stock_eodbar.sql  gfi_xcurrency_eodbar.sql  id_from_caption.sql  market_insert.sql  msymbol_duplicate.sql  offday_duplicate.sql  split_insert.sql  stype_insert.sql  symbol_insert.sql  underlying_insert.sql
database/indicators/: fpi_component_counter.sql  fpi_eodbar.sql
database/misc/: create_tables.sql  data_types.sql  languages.sql  schemata.sql  table_entries.sql
database/sqls/: AddBars.sql  AddTradingStrategy.sql  BackToHell.sql  DelAllUnderlyingsFromMother.sql  GetActiveFIs.sql  GetAllCOs.sql  GetAllFi.sql  GetAllGroups.sql  GetAllSplits.sql  GetAllSymbols.sql  GetBTDetails.sql  GetBacktest.sql  GetBarsLtd.sql  GetBestPerformance.sql  GetDepotNeededCash.sql  GetDepots.sql  GetDevils.sql  GetFi.sql  GetGMembers.sql  GetGroups.sql  GetMarket.sql  GetSplits.sql  GetSymbol.sql  GetSymbolsToFiId.sql  GetUnderlyings.sql  PutBacktest.sql  PutGroup.sql  SearchFi.sql
database/tables/: 0011_ftype.sql  0012_stype.sql  0020_fi.sql  0030_underlying.sql  0040_market.sql  0050_symbol.sql  0060_offday.sql  0080_msymbol.sql  0100_eodbar.sql  0105_split.sql  0130_broker.sql
database/views/: filupower_indicator.sql  lovely_symbol.sql
libs/: CMakeLists.txt  Filu.conf  ld-config-file.conf  libqsqlpsql.so-64  libs.pro
libs/calc/: CalcBetween.cpp  CalcBetween.h  CalcCross.cpp  CalcCross.h  CalcFilu.cpp  CalcFilu.h  CalcMuParser.cpp  CalcMuParser.h  CalcRef.cpp  CalcRef.h  CalcSetColor.cpp  CalcSetColor.h  CalcTALib.cpp  CalcTALib.h  CalcTrade.cpp  CalcTrade.h  CalcType.cpp  CalcType.h  CalcWatchDogs.cpp  CalcWatchDogs.h  Indicator.cpp  Indicator.h  IndicatorEditor.cpp  IndicatorEditor.h  IndicatorSelector.cpp  IndicatorSelector.h  MyParser.cpp  MyParser.h  TALib.cpp  TALib.h  Trader.cpp  Trader.h
libs/common/: ButtonPad.cpp  ButtonPad.h  DataTuple.cpp  DataTuple.h  DataTupleSet.cpp  DataTupleSet.h  DialogButton.cpp  DialogButton.h  Exporter.cpp  Exporter.h  FClass.cpp  FClass.h  FObject.cpp  FObject.h  FTool.cpp  FTool.h  FToolBar.cpp  FToolBar.h  FWidget.cpp  FWidget.h  Importer.cpp  Importer.h  IndiSetPad.cpp  IndiSetPad.h  LaunchPad.cpp  LaunchPad.h  LineEdit.cpp  LineEdit.h  RcFile.cpp  RcFile.h  Script.cpp  Script.h  SearchFiWidget.cpp  SearchFiWidget.h  SearchField.cpp  SearchField.h  SqlTableView.cpp  SqlTableView.h  StrategyEditor.cpp  StrategyEditor.h
libs/core/: CMakeLists.txt  CmdHelper.cpp  CmdHelper.h  DataTuple.cpp  DataTuple.h  DataTupleSet.cpp  DataTupleSet.h  Depots.cpp  Depots.h  Exporter.cpp  Exporter.h  FClass.cpp  FClass.h  FCoreApp.cpp  FCoreApp.h  FObject.cpp  FObject.h  FTool.cpp  FTool.h  Importer.cpp  Importer.h  Newswire.cpp  Newswire.h  RcFile.cpp  RcFile.h  Scanner.cpp  Scanner.h  Script.cpp  Script.h  SettingsFile.cpp  SettingsFile.h  Validator.cpp  Validator.h
libs/database/: BarTuple.cpp  BarTuple.h  COTuple.cpp  COTuple.h  FiTuple.cpp  FiTuple.h  Filu.cpp  Filu.h  FiluU.cpp  FiluU.h  MarketTuple.cpp  MarketTuple.h  QuoteTuple.h  SymbolTuple.cpp  SymbolTuple.h  Tuple.cpp  Tuple.h
libs/graphics/: COLine.cpp  COLine.h  COType.cpp  COType.h  Grip.cpp  Grip.h  IndiWidgetGroup.cpp  IndiWidgetGroup.h  IndiWidgetSimple.cpp  IndiWidgetSimple.h  IndicatorDataView.cpp  IndicatorDataView.h  IndicatorPainter.cpp  IndicatorPainter.h  IndicatorPicker.cpp  IndicatorPicker.h  IndicatorWidget.cpp  IndicatorWidget.h  PlotCandle.cpp  PlotCandle.h  PlotDashLine.cpp  PlotDashLine.h  PlotHistogram.cpp  PlotHistogram.h  PlotHistogramBar.cpp  PlotHistogramBar.h  PlotLine.cpp  PlotLine.h  PlotSheet.cpp  PlotSheet.h  PlotType.h  Scaler.cpp  Scaler.h  XScaleTicker.cpp  XScaleTicker.h
libs/gui/: ButtonPad.cpp  ButtonPad.h  CMakeLists.txt  DialogButton.cpp  DialogButton.h  FToolBar.cpp  FToolBar.h  FWidget.cpp  FWidget.h  FiTableView.cpp  FiTableView.h  IndiSetPad.cpp  IndiSetPad.h  IndiWidgetGroup.cpp  IndiWidgetGroup.h  IndiWidgetSimple.cpp  IndiWidgetSimple.h  IndicatorDataView.cpp  IndicatorDataView.h  IndicatorEditor.cpp  IndicatorEditor.h  IndicatorPicker.cpp  IndicatorPicker.h  IndicatorSelector.cpp  IndicatorSelector.h  IndicatorWidget.cpp  IndicatorWidget.h  LaunchPad.cpp  LaunchPad.h  LineEdit.cpp  LineEdit.h  SearchFiWidget.cpp  SearchFiWidget.h  SearchField.cpp  SearchField.h  SqlTableView.cpp  SqlTableView.h  StrategyEditor.cpp  StrategyEditor.h  SymbolTableView.cpp  (+1 more)
libs/qt-psqldriver/: CMakeLists.txt  README  main.cpp  qsql_psql.cpp  qsql_psql.h
libs/sqldriver/: readme.txt
progs/agentf/: AgentF.cpp  AgentF.h  CMakeLists.txt  CmdAdd.cpp  CmdAdd.h  CmdClass.cpp  CmdClass.h  CmdConfig.cpp  CmdConfig.h  CmdDB.cpp  CmdDB.h  CmdDeleteBars.cpp  CmdDeleteBars.h  CmdDo.cpp  CmdDo.h  CmdDoc.cpp  CmdDoc.h  CmdExorcise.cpp  CmdExorcise.h  CmdFetch.cpp  CmdFetch.h  CmdImp.cpp  CmdImp.h  CmdSet.cpp  CmdSet.h  CmdSplitBars.cpp  CmdSplitBars.h  CmdSummon.cpp  CmdSummon.h  CmdThis.cpp  CmdThis.h  agentf.pro  main.cpp
progs/diggerf/: CMakeLists.txt  DiggerF.cpp  DiggerF.h  diggerf.pro  main.cpp
progs/inspectorf/: BackTester.cpp  BackTester.h  CMakeLists.txt  InspectorF.cpp  InspectorF.h  filu-inspectorf.desktop  inspectorf.pro  main.cpp
progs/managerf/: AddFiPage.cpp  AddFiPage.h  CMakeLists.txt  ConfigPage.cpp  ConfigPage.h  FiPage.cpp  FiPage.h  IndicatorPage.cpp  IndicatorPage.h  LogBookPage.cpp  LogBookPage.h  ManagerF.cpp  ManagerF.h  ManagerPage.cpp  ManagerPage.h  filu-managerf.desktop  main.cpp  (+2 more)
(+362 files in other folders)
